[gd_scene load_steps=62 format=3 uid="uid://o1wthtbpquqd"]

[ext_resource type="Script" path="res://scenes/levels/TitleScreen/menu.gd" id="1_5s0bf"]
[ext_resource type="PackedScene" uid="uid://djfwsa2kdhmc8" path="res://scenes/shaders/crt_shader.tscn" id="2_mqycn"]
[ext_resource type="Texture2D" uid="uid://dujde1ejpnkd6" path="res://assets/pay button/play_00000.png" id="2_syncf"]
[ext_resource type="Texture2D" uid="uid://kothldw6jxdx" path="res://assets/pay button/play_00001.png" id="3_3vlog"]
[ext_resource type="Texture2D" uid="uid://bv0g6wvlk5qg2" path="res://assets/pay button/play_00002.png" id="4_uhruk"]
[ext_resource type="Texture2D" uid="uid://cqbiat6rpy8i7" path="res://assets/pay button/play_00003.png" id="5_li3uo"]
[ext_resource type="Texture2D" uid="uid://dflwgueal8tp5" path="res://assets/pay button/play_00004.png" id="6_dj50f"]
[ext_resource type="Texture2D" uid="uid://b83dj8lmyjqsj" path="res://assets/pay button/play_00005.png" id="7_po8uw"]
[ext_resource type="Texture2D" uid="uid://dbsysogwqevoe" path="res://assets/pay button/play_00006.png" id="8_j4ty7"]
[ext_resource type="Texture2D" uid="uid://bfsvtoxy0ubea" path="res://assets/pay button/play_00007.png" id="9_b0hsg"]
[ext_resource type="Texture2D" uid="uid://df6luowjx36pg" path="res://assets/pay button/play_00008.png" id="10_lvw0f"]
[ext_resource type="Texture2D" uid="uid://d0wvtwk1xntv3" path="res://assets/pay button/play_00009.png" id="11_a3htj"]
[ext_resource type="Texture2D" uid="uid://c0ogkukuson7y" path="res://assets/pay button/play_00010.png" id="12_426ja"]
[ext_resource type="Texture2D" uid="uid://b1mrpbjv67rv8" path="res://assets/pay button/play_00011.png" id="13_h37jr"]
[ext_resource type="Texture2D" uid="uid://bm5b0mq8ckii4" path="res://assets/pay button/play_00012.png" id="14_p2rda"]
[ext_resource type="Texture2D" uid="uid://crmqb3m4sof23" path="res://assets/pay button/play_00013.png" id="15_5qpng"]
[ext_resource type="Texture2D" uid="uid://cfn8x4i0c5eoo" path="res://assets/pay button/play_00014.png" id="16_4i4bf"]
[ext_resource type="Texture2D" uid="uid://6lv6dpsytfwn" path="res://assets/pay button/play_00015.png" id="17_jryq5"]
[ext_resource type="Texture2D" uid="uid://cwh6c8cjmqdcm" path="res://assets/pay button/play_00016.png" id="18_n641x"]
[ext_resource type="Texture2D" uid="uid://nfy5uoavtw38" path="res://assets/pay button/play_00017.png" id="19_rkdae"]
[ext_resource type="Texture2D" uid="uid://yg7hb3rw4hn1" path="res://assets/pay button/play_00018.png" id="20_nwweo"]
[ext_resource type="Texture2D" uid="uid://df12bewmgc6u3" path="res://assets/pay button/play_00019.png" id="21_wm4h5"]
[ext_resource type="Texture2D" uid="uid://byeqlurg7ld1g" path="res://assets/pay button/play_00020.png" id="22_f1nga"]
[ext_resource type="Texture2D" uid="uid://to2noywjoo27" path="res://assets/pay button/play_00021.png" id="23_t4wf5"]
[ext_resource type="Texture2D" uid="uid://bf5r2duaftqko" path="res://assets/pay button/play_00022.png" id="24_gqbpo"]
[ext_resource type="Texture2D" uid="uid://c02uk2hd04cjx" path="res://assets/pay button/play_00023.png" id="25_h65fy"]
[ext_resource type="Texture2D" uid="uid://ctxff0x34wgx" path="res://assets/pay button/play_00024.png" id="26_pnqrj"]
[ext_resource type="Texture2D" uid="uid://chwasiib1t4qc" path="res://assets/exit button/exit_00000.png" id="52_db0r2"]
[ext_resource type="Texture2D" uid="uid://btk44qpluub0s" path="res://assets/exit button/exit_00001.png" id="53_mja6i"]
[ext_resource type="FontFile" uid="uid://b4obf3mldvgog" path="res://assets/Fonts/HORROR SPRAY DEMO Regular.otf" id="54_auanj"]
[ext_resource type="Texture2D" uid="uid://dscekc4csuyj8" path="res://assets/exit button/exit_00002.png" id="54_prfsm"]
[ext_resource type="Texture2D" uid="uid://d4folmex16773" path="res://assets/exit button/exit_00003.png" id="55_cip4d"]
[ext_resource type="Texture2D" uid="uid://2x7rrerbgkhh" path="res://assets/exit button/exit_00004.png" id="56_l38lm"]
[ext_resource type="Texture2D" uid="uid://b7jau43liu2k" path="res://assets/exit button/exit_00005.png" id="57_u6c5a"]
[ext_resource type="Texture2D" uid="uid://50e2chxyjjhu" path="res://assets/exit button/exit_00006.png" id="58_dm3v7"]
[ext_resource type="Texture2D" uid="uid://8ox0fj2cbt10" path="res://assets/exit button/exit_00007.png" id="59_bfc6k"]
[ext_resource type="Texture2D" uid="uid://v4osoumpgsjs" path="res://assets/exit button/exit_00008.png" id="60_wlxnh"]
[ext_resource type="Texture2D" uid="uid://xxw0vmd2a1hc" path="res://assets/exit button/exit_00009.png" id="61_mkey7"]
[ext_resource type="Texture2D" uid="uid://bahfv01i3vxf7" path="res://assets/exit button/exit_00010.png" id="62_5tb0o"]
[ext_resource type="Texture2D" uid="uid://cr2yw3uoncig7" path="res://assets/exit button/exit_00011.png" id="63_uchp6"]
[ext_resource type="Texture2D" uid="uid://idtit3my7rax" path="res://assets/exit button/exit_00012.png" id="64_h3ar1"]
[ext_resource type="Texture2D" uid="uid://boiryhmj3rpof" path="res://assets/exit button/exit_00013.png" id="65_gicg1"]
[ext_resource type="Texture2D" uid="uid://bg7n4ermurkw7" path="res://assets/exit button/exit_00014.png" id="66_vkrh2"]
[ext_resource type="Texture2D" uid="uid://c7x71bab8wl7s" path="res://assets/exit button/exit_00015.png" id="67_vb5m7"]
[ext_resource type="Texture2D" uid="uid://b36l15hbpoa4o" path="res://assets/exit button/exit_00016.png" id="68_cc7d4"]
[ext_resource type="Texture2D" uid="uid://bjaltdycsw827" path="res://assets/exit button/exit_00017.png" id="69_ugfdo"]
[ext_resource type="Texture2D" uid="uid://bvry0nhtbr7t" path="res://assets/exit button/exit_00018.png" id="70_l2y7q"]
[ext_resource type="Texture2D" uid="uid://bda1fv61ql5m8" path="res://assets/exit button/exit_00019.png" id="71_jbjlb"]
[ext_resource type="Texture2D" uid="uid://c1x3yu7amo8nm" path="res://assets/exit button/exit_00020.png" id="72_v2hmr"]
[ext_resource type="Texture2D" uid="uid://bs2mf3s10khk3" path="res://assets/exit button/exit_00021.png" id="73_kh1gi"]
[ext_resource type="Texture2D" uid="uid://bkyw4emr4n2pr" path="res://assets/exit button/exit_00022.png" id="74_ah8fp"]
[ext_resource type="Texture2D" uid="uid://dhdmolngpxa7j" path="res://assets/exit button/exit_00023.png" id="75_rk6ns"]
[ext_resource type="Texture2D" uid="uid://dkhj56ofjtt7l" path="res://assets/exit button/exit_00024.png" id="76_g0ivt"]
[ext_resource type="PackedScene" uid="uid://b0pi4ocu1rpdi" path="res://scenes/levels/Transition/transition.tscn" id="103_6same"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q5hbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_syncf")
}, {
"duration": 1.0,
"texture": ExtResource("3_3vlog")
}, {
"duration": 1.0,
"texture": ExtResource("4_uhruk")
}, {
"duration": 1.0,
"texture": ExtResource("5_li3uo")
}, {
"duration": 1.0,
"texture": ExtResource("6_dj50f")
}, {
"duration": 1.0,
"texture": ExtResource("7_po8uw")
}, {
"duration": 1.0,
"texture": ExtResource("8_j4ty7")
}, {
"duration": 1.0,
"texture": ExtResource("9_b0hsg")
}, {
"duration": 1.0,
"texture": ExtResource("10_lvw0f")
}, {
"duration": 1.0,
"texture": ExtResource("11_a3htj")
}, {
"duration": 1.0,
"texture": ExtResource("12_426ja")
}, {
"duration": 1.0,
"texture": ExtResource("13_h37jr")
}, {
"duration": 1.0,
"texture": ExtResource("14_p2rda")
}, {
"duration": 1.0,
"texture": ExtResource("15_5qpng")
}, {
"duration": 1.0,
"texture": ExtResource("16_4i4bf")
}, {
"duration": 1.0,
"texture": ExtResource("17_jryq5")
}, {
"duration": 1.0,
"texture": ExtResource("18_n641x")
}, {
"duration": 1.0,
"texture": ExtResource("19_rkdae")
}, {
"duration": 1.0,
"texture": ExtResource("20_nwweo")
}, {
"duration": 1.0,
"texture": ExtResource("21_wm4h5")
}, {
"duration": 1.0,
"texture": ExtResource("22_f1nga")
}, {
"duration": 1.0,
"texture": ExtResource("23_t4wf5")
}, {
"duration": 1.0,
"texture": ExtResource("24_gqbpo")
}, {
"duration": 1.0,
"texture": ExtResource("25_h65fy")
}, {
"duration": 1.0,
"texture": ExtResource("26_pnqrj")
}],
"loop": false,
"name": &"hover",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_syncf")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_h65kx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("52_db0r2")
}, {
"duration": 1.0,
"texture": ExtResource("53_mja6i")
}, {
"duration": 1.0,
"texture": ExtResource("54_prfsm")
}, {
"duration": 1.0,
"texture": ExtResource("55_cip4d")
}, {
"duration": 1.0,
"texture": ExtResource("56_l38lm")
}, {
"duration": 1.0,
"texture": ExtResource("57_u6c5a")
}, {
"duration": 1.0,
"texture": ExtResource("58_dm3v7")
}, {
"duration": 1.0,
"texture": ExtResource("59_bfc6k")
}, {
"duration": 1.0,
"texture": ExtResource("60_wlxnh")
}, {
"duration": 1.0,
"texture": ExtResource("61_mkey7")
}, {
"duration": 1.0,
"texture": ExtResource("62_5tb0o")
}, {
"duration": 1.0,
"texture": ExtResource("63_uchp6")
}, {
"duration": 1.0,
"texture": ExtResource("64_h3ar1")
}, {
"duration": 1.0,
"texture": ExtResource("65_gicg1")
}, {
"duration": 1.0,
"texture": ExtResource("66_vkrh2")
}, {
"duration": 1.0,
"texture": ExtResource("67_vb5m7")
}, {
"duration": 1.0,
"texture": ExtResource("68_cc7d4")
}, {
"duration": 1.0,
"texture": ExtResource("69_ugfdo")
}, {
"duration": 1.0,
"texture": ExtResource("70_l2y7q")
}, {
"duration": 1.0,
"texture": ExtResource("71_jbjlb")
}, {
"duration": 1.0,
"texture": ExtResource("72_v2hmr")
}, {
"duration": 1.0,
"texture": ExtResource("73_kh1gi")
}, {
"duration": 1.0,
"texture": ExtResource("74_ah8fp")
}, {
"duration": 1.0,
"texture": ExtResource("75_rk6ns")
}, {
"duration": 1.0,
"texture": ExtResource("76_g0ivt")
}],
"loop": false,
"name": &"hover",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("52_db0r2")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lorgc"]
size = Vector2(47, 95)

[sub_resource type="Animation" id="Animation_1yl6c"]
resource_name = "Closing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(6.06287, 6.06287),
"update": 0,
"values": [Vector2(384, 540), Vector2(384, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(6.06287, 6.06287),
"update": 0,
"values": [Vector2(384, -108), Vector2(384, 108)]
}

[sub_resource type="Animation" id="Animation_r5kup"]
resource_name = "Opening"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.4822, 3.4822),
"update": 0,
"values": [Vector2(384, 324), Vector2(384, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.4822, 3.4822),
"update": 0,
"values": [Vector2(384, 108), Vector2(384, -108)]
}

[sub_resource type="Animation" id="Animation_y1k7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(384, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(384, 108)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k0j2h"]
_data = {
"Closing": SubResource("Animation_1yl6c"),
"Opening": SubResource("Animation_r5kup"),
"RESET": SubResource("Animation_y1k7v")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_5s0bf")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false

[node name="Play" type="Button" parent="."]
offset_left = 549.0
offset_top = 365.905
offset_right = 663.0
offset_bottom = 430.905
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play"
flat = true

[node name="PlaySprite" type="AnimatedSprite2D" parent="Play"]
position = Vector2(42, 24.5)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_q5hbr")
animation = &"hover"
autoplay = "normal"
frame_progress = 0.699995

[node name="Exit" type="Button" parent="."]
offset_left = 549.0
offset_top = 475.0
offset_right = 651.0
offset_bottom = 535.0
flat = true

[node name="ExitSprite" type="AnimatedSprite2D" parent="Exit"]
position = Vector2(42, 24.5)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_h65kx")
animation = &"hover"
autoplay = "normal"
frame_progress = 0.693826

[node name="CRTShader" parent="." instance=ExtResource("2_mqycn")]
visible = false
metadata/_edit_lock_ = true

[node name="Transition" parent="." instance=ExtResource("103_6same")]
scale = Vector2(1.5, 1.5)

[node name="TRIGGERSCENE" parent="Transition/Trigger" index="0"]
shape = SubResource("RectangleShape2D_lorgc")

[node name="AnimationPlayer" parent="Transition" index="3"]
libraries = {
"": SubResource("AnimationLibrary_k0j2h")
}

[node name="Button" type="Button" parent="."]
offset_left = 142.0
offset_top = 362.0
offset_right = 422.0
offset_bottom = 514.0
theme_override_fonts/font = ExtResource("54_auanj")
theme_override_font_sizes/font_size = 61
text = "Scene switcher"

[connection signal="mouse_entered" from="Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="Transition"]
